# ai-storyteller

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  main.py  pyproject.toml
playground/: story_illustrator.json  story_illustrator.py  story_teller.json  story_teller.py
playground/templates/: base_prompts.json  dashboard.html  error.html  home.html  login.html
src/storyteller/: settings.py
src/storyteller/modules/common/: media.py  storage.py  structured_outputs.py
src/storyteller/modules/st/: chat.py  content.py  content_docx.py  image_gen_calls.py  llm_calls.py  mcp_impl.py  option_choices.py  tool_impl.py
src/storyteller/modules/st/image_gen/: draw_things_text_to_image.py  fal_text_to_image.py
src/storyteller/tests/: conftest.py  test_drawthings.py  test_llm_calls.py
